--- a/src/pages/Alternatives/Alternatives.scss
+++ b/src/pages/Alternatives/Alternatives.scss
@@ -2,24 +2,39 @@
 @import '../../styles/global.scss';
 
 .alternatives {
-    max-width: 600px;
-    text-align-last: left;
-    color: $color-black-100;
-    line-height: 1.6em;
-    margin: 0 auto;
+  max-width: 600px;
+  text-align-last: left;
+  color: $color-black-100;
+  line-height: 1.6em;
+  margin: 0 auto;
+
+  &__title {
+    font-weight: 500;
+    font-size: $base * 7;
+    padding-bottom: $base * 2;
+  }
+
+  &__desc {
+    font-weight: 400;
+
+    p {
+      font-size: $base * 3.5;
+      padding-bottom: $base * 1.5;
+    }
+  }
+  //========Media queries=========
+  @media (max-width: 1000px) {
+    padding-left: $base * 4;
+    padding-right: $base * 4;
 
     &__title {
-        font-weight: 500;
-        font-size: $base * 7;
-        padding-bottom: $base * 2;
+      margin-top: $base * 8;
     }
 
     &__desc {
-        font-weight: 400;
-        
-        p {
-            font-size: $base * 3.5;
-            padding-bottom: $base * 1.5;
-        }
+      p {
+        padding-bottom: $base * 0.5;
+      }
     }
+  }
 }
