--- a/src/pages/Privacy/Privacy.scss
+++ b/src/pages/Privacy/Privacy.scss
@@ -1,16 +1,18 @@
 @import '../../styles/variables.scss';
 
 .privacy {
-    &__desc {
-        font-weight: 400;
+  &__desc {
+    font-weight: 400;
 
-        h1 {
-            font-size: $base * 5;
-        }
-
-        p {
-            font-size: $base * 4;
-            padding-bottom: $base * 1.5;
-        }
+    h1 {
+      font-size: $base * 5;
     }
+
+    p,
+    li {
+      font-weight: 400;
+      font-size: $base * 3.5;
+      padding-bottom: $base * 1.5;
+    }
+  }
 }
