--- a/src/pages/Privacy/Privacy.scss
+++ b/src/pages/Privacy/Privacy.scss
@@ -1,7 +1,16 @@
 @import '../../styles/variables.scss';
 
 .privacy {
+  max-width: 1000px;
+  width: 100%;
+  padding-left: $base * 4;
+  padding-right: $base * 4;
+  overflow-x: hidden;
+
   &__desc {
+    color: $color-black-100;
+
+    line-height: $base * 6;
     font-weight: 400;
 
     h1 {
@@ -14,5 +23,21 @@
       font-size: $base * 3.5;
       padding-bottom: $base * 1.5;
     }
+  }
+  //========Media queries=========
+  @media (max-width: 1000px) {
+    max-width: 700px;
+    &__desc {
+      p,
+      li {
+        padding-bottom: $base * 1;
+      }
+    }
+  }
+  @media (max-width: 740px) {
+    max-width: 500px;
+  }
+  @media (max-width: 740px) {
+    max-width: 300px;
   }
 }
