--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,33 +15,6 @@
 }
 // ============ / Shadow =========
 
-// ============ Select =========
-.select {
-  width: 100%;
-  font-size: $base * 3.5;
-  height: 70px;
-  border: 1px solid $color-gray-100;
-  transition: all 0.3s ease-in-out;
-  border-radius: $base;
-
-  user-select: none;
-  cursor: pointer;
-
-  &__placeholder {
-    padding: 1.3rem;
-    display: inline-block;
-  }
-
-  &__options {
-    visibility: hidden;
-  }
-
-  &_active {
-    visibility: visible;
-  }
-}
-// ============ / Select =========
-
 // ============ Logo =========
 .logo {
   width: $base * 45;
@@ -95,3 +68,10 @@
   }
 }
 // ============ / Wrapper =========
+
+// ============ Active =========
+._active {
+  visibility: visible !important;
+  
+}
+// ============ / Active =========
