--- a/src/components/ValutaGroup/ValutaGroup.scss
+++ b/src/components/ValutaGroup/ValutaGroup.scss
@@ -1,51 +1,60 @@
 @import '../../styles/variables.scss';
 
 .valuteGroup {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 
-    &__image {
-        z-index: 20;
-        background: $color-blue-100;
-        width: $base * 10;
-        height: $base * 10;
-        border-radius: 50%;
+  &__image {
+    z-index: 20;
+    background: $color-blue-100;
+    width: $base * 10;
+    height: $base * 10;
+    border-radius: 50%;
 
-        img {
-            display: block;
-            padding: 8px;
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            z-index: -100;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: $base * 15;
-            height: $base * 15;
-            background: $color-blue-200;
-            border-radius: 50%;
-        }
+    img {
+      display: block;
+      padding: 8px;
     }
-    
+
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: -100;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: $base * 15;
+      height: $base * 15;
+      background: $color-blue-200;
+      border-radius: 50%;
+    }
+  }
+
+  &__btn {
+    position: relative;
+    background: transparent;
+    margin: 30px 14px;
+    margin: $base * 4 $base * 8;
+    cursor: pointer;
+    border: none;
+    transition: all 0.4s ease-in;
+
+    &:hover {
+      transform: rotate(360deg);
+      .valuteGroup__image::before {
+        width: $base * 16;
+        height: $base * 16;
+      }
+    }
+  }
+
+  //========Media queries=========
+  @media (max-width: 600px) {
+    flex-direction: column;
+
     &__btn {
-        position: relative;
-        background: transparent;
-        margin: 30px 14px;
-        margin: $base * 4 $base * 8;
-        cursor: pointer;
-        border: none;
-        transition: all .4s ease-in;
-
-        &:hover {
-            transform: rotate(360deg);
-            .valuteGroup__image::before {
-                width: $base * 16;
-                height: $base * 16;
-            }
-        } 
+      margin-top: 30px;
     }
+  }
 }
